# lexsentinel

./: LexSentinel.spec  README.md  extractor.py  pyproject.toml
LexSentinel.AppDir/: .DirIcon  AppRun
LexSentinel.AppDir/usr/share/applications/: lexsentinel.desktop
src/lexsentinel/: cli.py  evidence.py  explainer.py  extractor.py  models.py  sanitizer.py  utils.py
src/lexsentinel/analyzers/: core.py  hidden_text.py  prompt.py  scoring.py  semantic.py  structure.py
src/lexsentinel/reports/: html.py  json.py  pdf.py
src/lexsentinel_gui/: app.py
tests/: test_core.py  test_prompt.py  test_reports.py  test_sanitizer.py  test_scoring.py  test_structure.py
